# View360

./: .gitignore  CMakeLists.txt  README.md  app.rc  logo.icns  main.cpp  shader_source.cpp  shader_source.h  version.h  version.h.in
create_icns/: png2icns
res/macos/: logo.icns
res/win/: app.rc
src/: app.cpp  app.h  config.cpp  config.h  config_dir.cpp  main.cpp
util/macos/: README.md  png2icns
